<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="320dp"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/dialog_background"
    android:orientation="vertical"
    android:padding="10dp"
    >
    <ImageView
        android:id="@+id/iv_ads"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_nod_ads_128"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:tint="@color/mGrey" />
    <TextView
        android:textAlignment="center"
        android:id="@+id/tv_no_ads_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:text="@string/st_no_ads"
        android:textSize="28sp"
        android:textColor="@color/mBlack"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/iv_ads"
        app:layout_constraintBottom_toBottomOf="@id/iv_ads"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/iv_ads"
        />
    <TextView
        android:id="@+id/tv_no_ads_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/st_permission_needed_to_be_granted"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/iv_ads"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="10dp"
        android:paddingHorizontal="10dp"
        />
    <Button
        android:id="@+id/btn_buy"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_no_ads_description"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/ib_option_grey_light"
        android:text="@string/st_buy"
        android:textColor="@color/mWhite"
        android:textStyle="bold"
        android:textSize="24sp"
        android:paddingVertical="10dp"
        android:layout_marginTop="10dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>